// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`menu 1`] = `
{
  "f": [
    [
      "type",
      "MENU",
    ],
    [
      "value",
      {
        "$": "ReactElement",
        "children": [
          {
            "$": "ReactElement",
            "children": [
              "Menu3",
            ],
            "props": {
              "f": [
                [
                  "onClick",
                  {
                    "$": "Bind",
                    "f": [
                      [
                        {
                          "$": "#this",
                        },
                        null,
                      ],
                      [
                        {
                          "$": "#fun",
                        },
                        {
                          "$": "_signal",
                        },
                      ],
                      [
                        {
                          "$": "#args",
                        },
                        [
                          {
                            "$": "menuDispatch",
                          },
                          "Menu3",
                          {
                            "f": [
                              [
                                "type",
                                "Menu3",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                [
                  "children",
                  {
                    "$": "undefined",
                  },
                ],
                [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": {
          "f": [
            [
              "children",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
}
`;

exports[`menu 2`] = `
{
  "f": [
    [
      "type",
      "MENU",
    ],
    [
      "value",
      {
        "$": "ReactElement",
        "children": [
          {
            "$": "ReactElement",
            "children": [
              "Menu1",
            ],
            "props": {
              "f": [
                [
                  "onClick",
                  {
                    "$": "Bind",
                    "f": [
                      [
                        {
                          "$": "#this",
                        },
                        null,
                      ],
                      [
                        {
                          "$": "#fun",
                        },
                        {
                          "r": 1,
                        },
                      ],
                      [
                        {
                          "$": "#args",
                        },
                        [
                          {
                            "r": 0,
                          },
                          "Menu1",
                          {
                            "f": [
                              [
                                "type",
                                "Menu1",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                [
                  "children",
                  {
                    "$": "undefined",
                  },
                ],
                [
                  "key",
                  ".$1",
                ],
              ],
            },
            "type": "button",
          },
          {
            "$": "ReactElement",
            "children": [
              "Menu3",
            ],
            "props": {
              "f": [
                [
                  "onClick",
                  {
                    "$": "Bind",
                    "f": [
                      [
                        {
                          "$": "#this",
                        },
                        null,
                      ],
                      [
                        {
                          "$": "#fun",
                        },
                        {
                          "r": 1,
                        },
                      ],
                      [
                        {
                          "$": "#args",
                        },
                        [
                          {
                            "r": 0,
                          },
                          "Menu3",
                          {
                            "f": [
                              [
                                "type",
                                "Menu3",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                [
                  "children",
                  {
                    "$": "undefined",
                  },
                ],
                [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": {
          "f": [
            [
              "children",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
  "x": [
    {
      "$": "menuDispatch",
    },
    {
      "$": "_signal",
    },
  ],
}
`;

exports[`menu 3`] = `
{
  "f": [
    [
      "type",
      "MENU",
    ],
    [
      "value",
      {
        "$": "ReactElement",
        "children": [
          {
            "$": "ReactElement",
            "children": [
              "Menu1",
            ],
            "props": {
              "f": [
                [
                  "onClick",
                  {
                    "$": "Bind",
                    "f": [
                      [
                        {
                          "$": "#this",
                        },
                        null,
                      ],
                      [
                        {
                          "$": "#fun",
                        },
                        {
                          "r": 1,
                        },
                      ],
                      [
                        {
                          "$": "#args",
                        },
                        [
                          {
                            "r": 0,
                          },
                          "Menu1",
                          {
                            "f": [
                              [
                                "type",
                                "Menu1",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                [
                  "children",
                  {
                    "$": "undefined",
                  },
                ],
                [
                  "key",
                  ".$1",
                ],
              ],
            },
            "type": "button",
          },
          {
            "$": "ReactElement",
            "children": [
              "Menu2",
            ],
            "props": {
              "f": [
                [
                  "onClick",
                  {
                    "$": "Bind",
                    "f": [
                      [
                        {
                          "$": "#this",
                        },
                        null,
                      ],
                      [
                        {
                          "$": "#fun",
                        },
                        {
                          "r": 1,
                        },
                      ],
                      [
                        {
                          "$": "#args",
                        },
                        [
                          {
                            "r": 0,
                          },
                          "Menu2",
                          {
                            "f": [
                              [
                                "type",
                                "Menu2",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                [
                  "children",
                  {
                    "$": "undefined",
                  },
                ],
                [
                  "key",
                  ".$2",
                ],
              ],
            },
            "type": "button",
          },
          {
            "$": "ReactElement",
            "children": [
              "Menu3",
            ],
            "props": {
              "f": [
                [
                  "onClick",
                  {
                    "$": "Bind",
                    "f": [
                      [
                        {
                          "$": "#this",
                        },
                        null,
                      ],
                      [
                        {
                          "$": "#fun",
                        },
                        {
                          "r": 1,
                        },
                      ],
                      [
                        {
                          "$": "#args",
                        },
                        [
                          {
                            "r": 0,
                          },
                          "Menu3",
                          {
                            "f": [
                              [
                                "type",
                                "Menu3",
                              ],
                            ],
                          },
                        ],
                      ],
                    ],
                  },
                ],
                [
                  "children",
                  {
                    "$": "undefined",
                  },
                ],
                [
                  "key",
                  ".$3",
                ],
              ],
            },
            "type": "button",
          },
        ],
        "props": {
          "f": [
            [
              "children",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": {
          "$": "Symbol",
          "key": "react.fragment",
        },
      },
    ],
  ],
  "x": [
    {
      "$": "menuDispatch",
    },
    {
      "$": "_signal",
    },
  ],
}
`;

exports[`menu 4`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;
